# BiliAnalysis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Spark服务器Standalone配置.md  bilibili_mining.ipynb  bilibili_spark_analysis.ipynb  bilibili_weekly_picks_analysis.ipynb  config.example.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  app.py  auth.py  auth_session.py  config.py  deps.py  errors.py  history.py  schemas.py
app/api/db/: __init__.py  loader.py  queries.py  schema.py  user_schema.py
app/api/router/: analysis.py  auth.py  categories.py  config.py  crawler.py  creators.py  db_load.py  proxy.py  tasks.py  videos.py  weeks.py
app/api/tasks/: __init__.py  db_load_task.py
app/cli/: __init__.py  schedule_cmd.py  serve_cmd.py
app/ui/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
app/ui/e2e/: visual.spec.ts
app/ui/src/: App.vue  main.ts  test-setup.ts
app/ui/src/router/: index.ts
deploy/: docker-compose.yml  nginx.conf
design-demos/: admin-v1.html  cluster-v1.html  homepage-v1.html  predict-v1.html  stats-v1.html  video-detail-spec.md  video-library-v1.html  weeks-browse-v1.html
docs/: BiliAnalysis UI Design Specification v1.0.docx  README.md  new-scheme.md
docs/dev/: development.md  models_design.md
docs/superpowers/plans/: 2026-06-15-crawler-implementation.md  2026-06-17-analysis-engine-implementation.md  2026-06-17-config-implementation.md  2026-06-17-spark-engine-implementation.md  2026-06-17-wbi-signing-implementation.md  2026-06-18-backend-api-implementation.md  2026-06-18-frontend-implementation.md  2026-06-18-scheduler-implementation.md  2026-06-19-browse-pages.md  2026-06-19-content-analysis.md  2026-06-19-postgresql-integration.md  2026-06-19-warehouse-implementation.md  2026-06-21-admin-auth.md  2026-06-21-docker-deploy.md  2026-06-22-element-plus-refactor.md  2026-06-22-spark-2.3.2-adaptation.md  2026-06-23-spark-connect-simplification.md  2026-06-25-spark-4.1.2-complete-integration.md  2026-06-25-user-auth.md
docs/superpowers/specs/: 2026-06-15-crawler-design.md  2026-06-17-analysis-engine-design.md  2026-06-17-config-design.md  2026-06-17-spark-engine-design.md  2026-06-17-wbi-signing-design.md  2026-06-18-backend-api-design.md  2026-06-18-frontend-design.md  2026-06-18-scheduler-design.md  2026-06-19-postgresql-integration-design.md  2026-06-19-warehouse-layered-design.md  2026-06-21-admin-auth-design.md  2026-06-22-element-plus-refactor-design.md  2026-06-22-spark-2.3.2-adaptation-design.md  2026-06-23-spark-connect-simplification-design.md  2026-06-25-spark-4.1.2-complete-integration.md
docs/test/: testing.md
src/app/: api.py
src/app/cli/: schedule_cmd.py  utils.py
src/bilianalysis/: models.py
src/bilianalysis/config/: __init__.py  loader.py  model.py
src/bilianalysis/crawler/: __init__.py  api.py  pipeline.py  signer.py  storage.py
src/bilianalysis/engine/: __init__.py  base.py  pandas_engine.py  spark_engine.py
src/bilianalysis/etl/: __init__.py  transform.py
src/bilianalysis/nlp/: __init__.py  keywords.py  stopwords.txt
src/bilianalysis/scheduler/: __init__.py  cron_service.py  models.py  registry.py  runner.py  task.py
src/bilianalysis/utils/: async_utils.py  fetch.py  ua.py
src/bilianalysis/warehouse/: __init__.py  ads.py  builder.py  dwd.py  dws.py  report.py
tests/: test_api.py  test_config.py  test_engine.py  test_fetch.py  test_history.py  test_loader.py  test_pipeline.py  test_scheduler.py  test_signer.py  test_storage.py  test_transform.py  test_warehouse.py
tests/test_spark_engine/: test_clean.py  test_lifecycle.py
(+74 files in other folders)
