[project]
name = "bilianalysis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "fake-useragent>=2.2.0",
    "hdfs>=2.7.3",
    "httpx2>=2.4.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.9.0",
    "typer>=0.26.7",
]

[project.optional-dependencies]
spark = [
    "pyspark>=4.1.2",
]

[dependency-groups]
dev = [
    "pyspark>=4.1.2",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bilianalysis", "app"]

[project.scripts]
bilianalysis = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
