[project]
name = "bilianalysis"
version = "0.6.3"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.138.0",
    "hdfs>=2.7.3",
    "ipykernel>=7.3.0",
    "itsdangerous>=2.2.0",
    "jieba>=0.42.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.9.0",
    "xgboost>=2.1.4,<3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "typer>=0.26.7",
    "types-pyyaml>=6.0.12.20260518",
    "uvicorn>=0.49.0",
    "scikit-optimize>=0.10.2",
    "lightgbm>=4.6.0",
]

[project.optional-dependencies]
spark = [
    "pyspark==4.1.2",
    "grpcio>=1.60.0",
    "grpcio-status>=1.60.0",
    "googleapis-common-protos>=1.63.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "grpcio>=1.60.0",
    "grpcio-status>=1.60.0",
    "googleapis-common-protos>=1.63.0",
    "httpx2>=0.4.0",
    "matplotlib>=3.11.0",
    "mypy>=2.1.0",
    "pyspark>=4.1.2,<5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "seaborn>=0.13.2",
    "zstandard>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/bilianalysis", "app/api", "app/cli"]

[project.scripts]
bilianalysis = "cli:app"
bilianalysis-serve = "cli.serve_cmd:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
